fix: DADI - more user friendly

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <div id="my-roll"></div>
+    <div id="computer-roll"></div>
 
     <script type="text/javascript" src="js/script.js"></script>
 </body>
